feat: create css-api for all styles without modal

--- a/src/scss/_cut.scss
+++ b/src/scss/_cut.scss
@@ -1,4 +1,10 @@
+@import 'private';
+@import 'brand';
+
 .yfm-cut {
+    @include private-brand();
+    @include brand();
+
     $class: &;
     margin-bottom: 15px;
 
@@ -14,7 +20,7 @@
         }
 
         &:focus {
-            outline-color: $accentColor;
+            outline-color: var(--yfm-color-accent);
         }
 
         &:before {
