--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,4 +1,6 @@
-@import 'variables';
+/* stylelint-disable declaration-no-important */
+@import 'private';
+@import 'brand';
 
 @mixin removeMarginForEdgeChildren {
     & > *:first-child {
@@ -11,11 +13,14 @@
 }
 
 .yfm {
+    @include private-brand();
+    @include brand();
+
     font-family: var(--yfm-font-family-sans);
     font-size: 15px;
     line-height: 20px;
     word-wrap: break-word;
-    color: $textColor;
+    color: var(--yfm-color-text);
 
     * {
         box-sizing: border-box;
@@ -66,11 +71,11 @@
 
     a {
         background-color: transparent;
-        color: $linkColor;
+        color: var(--yfm-color-link);
         text-decoration: none;
 
         &:hover, &:active {
-            color: $linkHoverColor;
+            color: var(--yfm-color-link-hover);
         }
 
         &:not([href]) {
@@ -100,7 +105,7 @@
 
     img {
         object-fit: contain;
-        background-color: $baseColor;
+        background-color: var(--yfm-color-base);
     }
 
     svg {
@@ -157,7 +162,7 @@
     }
 
     table {
-        color: #333;
+        color: var(--yfm-color-table);
 
         display: inline-block;
         max-width: 100%;
@@ -167,14 +172,14 @@
         z-index: 1;
 
         box-sizing: border-box;
-        border: 1px solid $borderColor;
+        border: 1px solid var(--yfm-color-border);
         border-radius: 8px;
         border-collapse: collapse;
         border-spacing: 0;
-        background: $baseColor;
+        background: var(--yfm-color-base);
 
         thead, tr:nth-child(2n) {
-            background-color: $tableRowBackgroundColor;
+            background-color: var(--yfm-color-table-row-background);
         }
 
         tr:first-child {
@@ -194,7 +199,7 @@
             padding: 10px 20px;
             overflow: hidden;
             text-overflow: ellipsis;
-            border: 1px solid $borderColor;
+            border: 1px solid var(--yfm-color-border);
 
             @include removeMarginForEdgeChildren();
         }
@@ -224,7 +229,7 @@
         margin: 1.5em 0;
         overflow: hidden;
 
-        background-color: $borderColor;
+        background-color: var(--yfm-color-border);
         border: none;
 
         &::before {
@@ -242,7 +247,7 @@
     blockquote {
         position: relative;
         padding-left: 12px;
-        border-left: 3px solid $accentColor;
+        border-left: 3px solid var(--yfm-color-accent);
 
         @include removeMarginForEdgeChildren();
     }
@@ -321,11 +326,11 @@
 
     code {
         padding: 0.1em 0.4em 0.15em;
-        background-color: $inlineCodeBackgroundColor;
+        background-color: var(--yfm-color-inline-code-background);
         border-radius: 4px;
         font-size: 0.875em;
         white-space: pre-wrap;
-        color: $inlineCodeColor;
+        color: var(--yfm-color-inline-code);
     }
 
     pre {
@@ -344,7 +349,7 @@
         word-wrap: normal;
         background-color: transparent;
         border: 0;
-        color: $textColor;
+        color: var(--yfm-color-text);
     }
 
     pre > code {
@@ -352,8 +357,8 @@
         padding: 16px;
         overflow: auto;
 
-        background-color: $codeBackgroundColor;
-        color: $textColor;
+        background-color: var(--yfm-color-code-background);
+        color: var(--yfm-color-text);
 
         white-space: pre;
     }
@@ -388,17 +393,6 @@
         user-select: none;
     }
 
-    // highlight.js colors
-    --yfm-color-hljs-background: #{$codeBackgroundColor};
-    --yfm-color-hljs-subst: #444;
-    --yfm-color-hljs-comment: #888888;
-    --yfm-color-hljs-deletion: #880000;
-    --yfm-color-hljs-section: #880000;
-    --yfm-color-hljs-pseudo: #BC6060;
-    --yfm-color-hljs-literal: #78A960;
-    --yfm-color-hljs-addition: #397300;
-    --yfm-color-hljs-meta: #1f7199;
-    --yfm-color-hljs-meta-string: #4d99bf;
     --yfm-font-family-monospace: "Menlo", "Monaco", "Consolas", "Ubuntu Mono", "Liberation Mono", "DejaVu Sans Mono", "Courier New", "Courier", monospace;
     --yfm-font-family-sans: 'Segoe UI', Arial, Helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
