--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable declaration-no-important */
+
 .wide-container {
     position: fixed;
     width: 100vw;
@@ -19,7 +21,7 @@
 
     .wide-content-wrapper {
         z-index: 200;
-        background-color: var(--g-color-base-background);   
+        background-color: var(--g-color-base-background);
         height: 90vh;
         width: 70vw;
         border-radius: 10px;
@@ -75,7 +77,7 @@
             }
        }
     }
-}   
+}
 
 .wide-element-wrapper {
     display: flex;
