feat: add css-api

--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -40,4 +40,9 @@
     --yfm-color-term-dfn-background: var(--yfm-color-term-dfn-background-private);
     --yfm-color-term-dfn-shadow: var(--yfm-color-term-dfn-shadow-private);
     --yfm-color-term-dfn-pseudo-shadow: var(--yfm-color-term-dfn-presudo-shadow-private);
+
+    --yfm-color-modal-content: var(--yfm-color-modal-content-private);
+    --yfm-color-modal-actions-hover: var(--yfm-color-modal-actions-hover-private);
+    --yfm-color-modal-wide-content: var(--yfm-color-modal-wide-content-private);
+    --yfm-color-modal-wide-content-overlay: var(--yfm-color-modal-wide-content-overlay-private);
 }
