--- a/src/scss/_term.scss
+++ b/src/scss/_term.scss
@@ -1,10 +1,4 @@
-@import 'private';
-@import 'brand';
-
 .yfm-term {
-    @include private-brand();
-    @include brand();
-
     &_title {
         color: var(--yfm-color-term-title);
         cursor: pointer;
@@ -53,10 +47,7 @@
             content: '';
             position: absolute;
             z-index: -1;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+            inset: 0;
 
             border-radius: inherit;
             box-shadow: 0 0 0 1px var(--yfm-color-term-dfn-pseudo-shadow);
