--- a/src/scss/_cut.scss
+++ b/src/scss/_cut.scss
@@ -14,7 +14,7 @@
         }
 
         &:focus {
-            outline-color: $accentColor;
+            outline-color: var(--yfm-color-accent);
         }
 
         &:before {
