--- a/src/scss/_term.scss
+++ b/src/scss/_term.scss
@@ -1,6 +1,6 @@
 .yfm-term {
     &_title {
-        color: #027bf3;
+        color: var(--yfm-color-term-title);
         cursor: pointer;
 
         border-bottom: 1px dotted;
@@ -10,7 +10,7 @@
         font-style: normal;
 
         &:hover {
-            color: #004080;
+            color: var(--yfm-color-term-title-hover);
         }
     }
 
@@ -32,7 +32,7 @@
 
         padding: 10px;
 
-        background-color: rgb(255, 255, 255);
+        background-color: var(--yfm-color-term-dfn-background);
 
         font-size: inherit;
         line-height: inherit;
@@ -40,20 +40,17 @@
 
         border-radius: 4px;
 
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 8px 20px var(--yfm-color-term-dfn-shadow);
         outline: none;
 
         &::before {
             content: '';
             position: absolute;
             z-index: -1;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+            inset: 0;
 
             border-radius: inherit;
-            box-shadow: 0 0 0 1px rgb(229, 229, 229);
+            box-shadow: 0 0 0 1px var(--yfm-color-term-dfn-pseudo-shadow);
         }
 
         &.open {
