feat(build): updated _yfm-only.scss comment and base.scss

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -1,4 +1,5 @@
 @import 'base';
 @import 'yfm-only';
+@import 'modal';
 @import '@diplodoc/cut-extension/runtime';
 @import '@diplodoc/tabs-extension/runtime';
