feat(dist): export css and js without tabs and cuts (#540)

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -1,12 +1,5 @@
-@import 'common';
-@import 'note';
-@import 'anchor';
-@import 'highlight';
-@import 'code';
-@import 'file';
-@import 'term';
-@import 'table';
+@import 'base';
+@import 'yfm-only';
 @import 'modal';
-
 @import '@diplodoc/cut-extension/runtime';
 @import '@diplodoc/tabs-extension/runtime';
