fix (code): fix click clipboard button

--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -36,5 +36,11 @@
         &-icon {
             pointer-events: none;
         }
+
+        &::before {
+            content: '';
+            position: absolute;
+            inset: -5px;
+        }
     }
 }
