feat: add css-var: info-color

--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -33,6 +33,7 @@
     --yfm-color-note-warning-background: var(--yfm-color-note-warning-background-private);
     --yfm-color-note-important: var(--yfm-color-note-important-private);
     --yfm-color-note-important-background: var(--yfm-color-note-important-background-private);
+    --yfm-color-note-info: var(--yfm-color-note-info-private);
     --yfm-color-note-info-background: var(--yfm-color-note-info-background-private);
 
     --yfm-color-term-title: var(--yfm-color-term-title-private);
