--- a/src/scss/private.scss
+++ b/src/scss/private.scss
@@ -29,6 +29,7 @@
     --yfm-color-note-warning-background-private: rgba(255, 136, 0, 0.15);
     --yfm-color-note-important-private: #ff4645;
     --yfm-color-note-important-background-private: rgba(235, 50, 38, 0.08);
+    --yfm-color-note-info-private: #027bf3;
     --yfm-color-note-info-background-private: rgba(2, 123, 243, 0.08);
 
     --yfm-color-term-title-private: #027bf3;
