feat(file): replaced own plugin with file-extension

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -2,4 +2,5 @@
 @import 'yfm-only';
 @import 'modal';
 @import '@diplodoc/cut-extension/runtime';
+@import '@diplodoc/file-extension/runtime';
 @import '@diplodoc/tabs-extension/runtime';
