fix Copy Button in OpenAPI Documentation
Restore Copy Button in OpenAPI Documentation

https://github.com/orgs/diplodoc-platform/projects/7/views/1?pane=issue&itemId=87769494&issue=diplodoc-platform%7Copenapi-extension%7C80

--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -5,6 +5,8 @@
         &:hover {
             .yfm-clipboard-button {
                 opacity: 1;
+                min-height: 20px;
+                min-width: 20px;
             }
         }
 
