--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -307,23 +307,26 @@
         margin-bottom: 0;
     }
 
-    &:not(.yfm_no-list-reset) {
-        ol {
-            list-style-type: none;
-            counter-reset: list;
+    ol {
+        counter-reset: list;
 
-            & > li {
-                position: relative;
-                counter-increment: list;
-
-                &::before {
-                    position: absolute;
-                    right: 100%;
-                    margin-right: 4px;
-                    content: counters(list, '.') '. ';
-                }
-            }
+        & > li {
+            position: relative;
+            counter-increment: list;
         }
+    }
+
+    ol > li > ol > li::marker {
+        content: counters(list, '.') '. ';
+    }
+
+    :not(ol > li) > ol > li::marker {
+        content: counter(list) '. ';
+    }
+
+    // No direct ancestor (>) combinator to preserve legacy behavior
+    ol.yfm_no-list-reset li::marker {
+        content: unset;
     }
 
     li {
