--- a/src/scss/_note.scss
+++ b/src/scss/_note.scss
@@ -29,16 +29,22 @@
         }
     }
 
-    $colors: (
-        yfm-accent-info: var(--yfm-color-accent),
-        yfm-accent-tip: var(--yfm-color-note-tip),
-        yfm-accent-alert: var(--yfm-color-note-important),
-        yfm-accent-warning: var(--yfm-color-note-warning),
+    @function svg-factory($fill-color) {
+        @return 'data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16"%3E%3Ccircle cx="8" cy="8" r="8" fill="' +
+            $fill-color +
+            '"/%3E%3Crect width="1" height="5" x="7.5" y="6.5" stroke="%23fff" rx=".5"/%3E%3Ccircle cx="8" cy="4" r="1" fill="%23fff"/%3E%3C/svg%3E';
+    }
+
+    $noteIcons: (
+        yfm-accent-info: svg-factory(var(--yfm-color-accent)),
+        yfm-accent-tip: svg-factory(var(--yfm-color-note-tip)),
+        yfm-accent-alert: svg-factory(var(--yfm-color-note-important)),
+        yfm-accent-warning: svg-factory(var(--yfm-color-note-warning)),
     );
 
-    @each $type, $color in $colors {
+    @each $type, $noteIcon in $noteIcons {
         &.#{$type} > p:first-child::before {
-            content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16"%3E%3Ccircle cx="8" cy="8" r="8" fill="' + $color + '"/%3E%3Crect width="1" height="5" x="7.5" y="6.5" stroke="%23fff" rx=".5"/%3E%3Ccircle cx="8" cy="4" r="1" fill="%23fff"/%3E%3C/svg%3E');
+            content: url($noteIcon);
         }
     }
 
