--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -135,7 +135,7 @@
     dl,
     table,
     pre {
-        margin: 0 0 15px;
+        margin-block: var(--yfm-text-block-margin-block, 0 15px);
     }
 
     ul,
@@ -333,12 +333,17 @@
     }
 
     li + li {
-        margin-top: 0.33em;
+        margin-block: var(--yfm-list-item-margin-block, 0.33em 0);
     }
 
     li p,
     li blockquote {
-        margin-top: 15px;
+        margin-block: var(--yfm-list-text-margin-block, 15px);
+    }
+
+    li > p:last-child,
+    li > blockquote:last-child {
+        margin-block: var(--yfm-list-text-last-margin-block, 15px);
     }
 
     code {
