--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -6,7 +6,10 @@
     --yfm-color-link-hover: var(--yfm-color-link-hover-private);
 
     --yfm-color-table: var(--yfm-color-table-private);
+    --yfm-color-table-background: var(--yfm-color-table-background-private);
     --yfm-color-table-row-background: var(--yfm-color-table-row-background-private);
+    --yfm-color-table-outer-border: var(--yfm-color-table-outer-border-private);
+    --yfm-color-table-inner-border: var(--yfm-color-table-inner-border-private);
 
     --yfm-color-border: var(--yfm-color-border-private);
 
@@ -15,6 +18,7 @@
     --yfm-color-inline-code: var(--yfm-color-inline-code-private);
     --yfm-color-inline-code-background: var(--yfm-color-inline-code-background-private);
     --yfm-color-code-background: var(--yfm-color-code-background-private);
+    --yfm-color-code: var(--yfm-color-code-private);
 
     --yfm-color-hljs-background: var(--yfm-color-hljs-background-private);
     --yfm-color-hljs-subst: var(--yfm-color-hljs-subst-private);
@@ -29,12 +33,20 @@
 
     --yfm-color-note-tip: var(--yfm-color-note-tip-private);
     --yfm-color-note-tip-background: var(--yfm-color-note-tip-background-private);
+    --yfm-color-note-tip-border: var(--yfm-color-note-tip-border-private);
+    --yfm-note-info-border-thickness: var(--yfm-note-info-border-thickness-private);
     --yfm-color-note-warning: var(--yfm-color-note-warning-private);
     --yfm-color-note-warning-background: var(--yfm-color-note-warning-background-private);
+    --yfm-color-note-warning-border: var(--yfm-color-note-warning-border-private);
+    --yfm-note-warning-border-thickness: var(--yfm-note-warning-border-thickness-private);
     --yfm-color-note-important: var(--yfm-color-note-important-private);
     --yfm-color-note-important-background: var(--yfm-color-note-important-background-private);
+    --yfm-color-note-important-border: var(--yfm-color-note-important-border-private);
+    --yfm-note-important-border-thickness: var(--yfm-note-important-border-thickness-private);
     --yfm-color-note-info: var(--yfm-color-note-info-private);
     --yfm-color-note-info-background: var(--yfm-color-note-info-background-private);
+    --yfm-color-note-info-border: var(--yfm-color-note-info-border-private);
+    --yfm-note-info-border-thickness: var(--yfm-note-info-border-thickness-private);
 
     --yfm-color-term-title: var(--yfm-color-term-title-private);
     --yfm-color-term-title-hover: var(--yfm-color-term-title-hover-private);
@@ -46,4 +58,10 @@
     --yfm-color-modal-actions-hover: var(--yfm-color-modal-actions-hover-private);
     --yfm-color-modal-wide-content: var(--yfm-color-modal-wide-content-private);
     --yfm-color-modal-wide-content-overlay: var(--yfm-color-modal-wide-content-overlay-private);
+
+    --yfm-color-quote: var(--yfm-color-quote-private);
+    --yfm-color-tab: var(--yfm-color-tab-private);
+    --yfm-color-tab-hover: var(--yfm-color-tab-private);
+    --yfm-color-popup-background: var(--yfm-color-popup-background-private);
+    --yfm-color-popup-border: var(--yfm-color-popup-border-private);
 }
