--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -100,6 +100,7 @@
     svg {
         box-sizing: content-box;
         max-width: 100%;
+        max-height: fit-content;
         border: none;
         vertical-align: middle;
 
