--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -313,14 +313,23 @@
         margin-block: var(--yfm-list-item-margin-block, 0.33em 0);
     }
 
-    li p,
-    li blockquote {
-        margin-block: var(--yfm-list-text-margin-block, 15px);
-    }
+    li {
+        p,
+        blockquote {
+            margin-block: var(--yfm-list-text-margin-block, 0 15px);
+        }
 
-    li > p:last-child,
-    li > blockquote:last-child {
-        margin-block: var(--yfm-list-text-last-margin-block, 15px);
+        > p:only-child,
+        > blockquote:only-child {
+            margin-block: var(--yfm-list-text-only-margin-block, 0);
+        }
+
+        @supports selector(:has(br)) {
+            > p:only-child:has(br),
+            > blockquote:only-child:has(br) {
+                margin-block: var(--yfm-list-text-margin-block, 0 15px);
+            }
+        }
     }
 
     code {
