feat(code): add line numbers to code blocks and improve clipboard copy functionality

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -370,6 +370,13 @@
         color: var(--yfm-color-text);
 
         white-space: pre;
+
+        .yfm-line-number {
+            display: inline-block;
+            padding-right: 1em;
+            color: var(--yfm-color-line-numbers, #666);
+            user-select: none;
+        }
     }
 
     sup,
