feat: highlight inline code with a link

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -342,6 +342,10 @@
         tab-size: var(--yfm-tab-size-code, inherit);
     }
 
+    a code {
+        text-decoration: underline;
+    }
+
     pre {
         word-wrap: normal;
     }
