feat: highlight inline code with a link (#694)
* feat: highlight inline code with a link

* fix: apply color fix

Co-authored-by: Martyanov Andrey <37772440+martyanovandrey@users.noreply.github.com>

---------

Co-authored-by: Martyanov Andrey <37772440+martyanovandrey@users.noreply.github.com>

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -342,6 +342,10 @@
         tab-size: var(--yfm-tab-size-code, inherit);
     }
 
+    a code {
+        color: inherit;
+    }
+
     pre {
         word-wrap: normal;
     }
