--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -327,11 +327,8 @@
             margin-block: var(--yfm-list-text-only-margin-block, 0);
         }
 
-        @supports selector(:has(br)) {
-            > p:only-of-type:has(br),
-            > blockquote:only-of-type:has(br) {
-                margin-block: var(--yfm-list-text-margin-block, 0 15px);
-            }
+        > p:last-child {
+            margin-block: var(--yfm-list-text-last-margin-block, 0);
         }
     }
 
