--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -15,6 +15,7 @@
     --yfm-color-inline-code: var(--yfm-color-inline-code-private);
     --yfm-color-inline-code-background: var(--yfm-color-inline-code-background-private);
     --yfm-color-code-background: var(--yfm-color-code-background-private);
+    --yfm-color-code-hovered-background: var(--yfm-color-code-hovered-background-private);
 
     --yfm-color-hljs-background: var(--yfm-color-hljs-background-private);
     --yfm-color-hljs-subst: var(--yfm-color-hljs-subst-private);
