--- a/src/scss/private.scss
+++ b/src/scss/private.scss
@@ -11,6 +11,7 @@
     --yfm-color-inline-code-private: rgba(59, 96, 128, 1);
     --yfm-color-inline-code-background-private: rgba(107, 132, 153, 0.12);
     --yfm-color-code-background-private: rgba(107, 132, 153, 0.12);
+    --yfm-color-code-background-hovered-private: rgba(107, 132, 153, 0.2);
 
     --yfm-color-hljs-background-private: rgba(107, 132, 153, 0.12);
     --yfm-color-hljs-subst-private: #444;
