--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -191,7 +191,7 @@
         border-spacing: 0;
         background: var(--yfm-color-base);
 
-        thead,
+        thead tr,
         tr:nth-child(2n) {
             background-color: var(--yfm-color-table-row-background);
         }
